; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/parisc/extr_ccio-dma.c_ccio_free_consistent.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/parisc/extr_ccio-dma.c_ccio_free_consistent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.device*, i64, i8*, i32)* @ccio_free_consistent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ccio_free_consistent(%struct.device* %0, i64 %1, i8* %2, i32 %3) #0 {
  %5 = alloca %struct.device*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %5, align 8
  store i64 %1, i64* %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load %struct.device*, %struct.device** %5, align 8
  %10 = load i32, i32* %8, align 4
  %11 = load i64, i64* %6, align 8
  %12 = call i32 @ccio_unmap_single(%struct.device* %9, i32 %10, i64 %11, i32 0)
  %13 = load i8*, i8** %7, align 8
  %14 = ptrtoint i8* %13 to i64
  %15 = load i64, i64* %6, align 8
  %16 = call i32 @get_order(i64 %15)
  %17 = call i32 @free_pages(i64 %14, i32 %16)
  ret void
}

declare dso_local i32 @ccio_unmap_single(%struct.device*, i32, i64, i32) #1

declare dso_local i32 @free_pages(i64, i32) #1

declare dso_local i32 @get_order(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
